--- a/StareMedic/Views/Viewers/PatientControll.xaml
+++ b/StareMedic/Views/Viewers/PatientControll.xaml
@@ -22,7 +22,7 @@
                     <Entry x:Name="EntryPatientName"
                            Style="{StaticResource entryName}"
                            Placeholder="Ingresa el nombre del Paciente..."
-                           TextChanged="EntryName_TextChanged"/>
+                           TextChanged="EntryPatientName_TextChanged"/>
 
                 </HorizontalStackLayout>
 
@@ -114,10 +114,10 @@
                     <Label Text="Direccion (Calle, Numero, Numero int., C.P., Colonia...):"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryDomicilio"
+                    <Entry x:Name="EntryDomicilio"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
-                               TextChanged="EntryDomicilio_TextChanged"
+                               TextChanged="EntryDomicilio_TextChanged_1"
                                MinimumWidthRequest="500"
                                MaximumWidthRequest="650"
                                HorizontalOptions="Start"/>
@@ -129,7 +129,7 @@
                     <Label Text="Ciudad:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryCiudad"
+                    <Entry x:Name="EntryCiudad"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryCiudad_TextChanged"
@@ -143,7 +143,7 @@
                     <Label Text="Estado:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryEstado"
+                    <Entry x:Name="EntryEstado"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryEstado_TextChanged"
@@ -157,7 +157,7 @@
                     <Label Text="Nacionalidad:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryNacionalidad"
+                    <Entry x:Name="EntryNacionalidad"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryNacionalidad_TextChanged"
@@ -181,7 +181,7 @@
                     <Label Text="Nombre:"
                            HorizontalOptions="Start"
                            TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryNombreCercano"
+                    <Entry x:Name="EntryNombreCercano"
                            VerticalOptions="Start"
                            TextTransform="Uppercase"
                            TextChanged="EntryNombreCercano_TextChanged"
@@ -196,7 +196,7 @@
                     <Label Text="Telefono:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryTelefonoCercano"
+                    <Entry x:Name="EntryTelefonoCercano"
                            Style="{StaticResource entryPhone}"
                            TextChanged="EntryTelefonoCercano_TextChanged"/>
                 </StackLayout>
@@ -206,7 +206,7 @@
                     <Label Text="Direccion (Calle, Numero, Numero int., C.P., Colonia...):"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryDomicilioCercano"
+                    <Entry x:Name="EntryDomicilioCercano"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryDomicilioCercano_TextChanged"
@@ -221,7 +221,7 @@
                     <Label Text="Ciudad:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryCiudadCercano"
+                    <Entry x:Name="EntryCiudadCercano"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryCiudadCercano_TextChanged"
@@ -236,7 +236,7 @@
                     <Label Text="Estado:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryEstadoCercano"
+                    <Entry x:Name="EntryEstadoCercano"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryEstadoCercano_TextChanged"
@@ -250,7 +250,7 @@
                     <Label Text="Relacion:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryRelacionCercano"
+                    <Entry x:Name="EntryRelacionCercano"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryRelacionCercano_TextChanged"
@@ -268,10 +268,10 @@
             <HorizontalStackLayout>
                 <Label Text="El pariente cercano es el fiador:"
                        VerticalOptions="Center"/>
-                <CheckBox x:Name="chkCercanoIsFiador"
+                <CheckBox x:Name="ChkCercanoIsFiador"
                           HorizontalOptions="Center"
                           IsChecked="True"
-                          CheckedChanged="CheckBox_CheckedChanged"/>
+                          CheckedChanged="ChkCercanoIsFiador_CheckedChanged"/>
             </HorizontalStackLayout>
 
             <!--Fiador-->
@@ -284,7 +284,7 @@
                     <Label Text="Nombre:"
                            HorizontalOptions="Start"
                            TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryNombreFiador"
+                    <Entry x:Name="EntryNombreFiador"
                            VerticalOptions="Start"
                            TextTransform="Uppercase"
                            TextChanged="EntryNombreFiador_TextChanged"
@@ -299,7 +299,7 @@
                     <Label Text="Telefono:"
                            HorizontalOptions="Start"
                            TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryTelefonoFiador"
+                    <Entry x:Name="EntryTelefonoFiador"
                            Style="{StaticResource entryPhone}"
                            TextChanged="EntryTelefonoFiador_TextChanged"/>
                 </StackLayout>
@@ -309,7 +309,7 @@
                     <Label Text="Direccion (Calle, Numero, Numero int., C.P., Colonia...):"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryDireccionFiador"
+                    <Entry x:Name="EntryDireccionFiador"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryDireccionFiador_TextChanged"
@@ -324,7 +324,7 @@
                     <Label Text="Ciudad:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryCiudadFiador"
+                    <Entry x:Name="EntryCiudadFiador"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryCiudadFiador_TextChanged"
@@ -339,7 +339,7 @@
                     <Label Text="Estado:"
                                HorizontalOptions="Start"
                                TextColor="#b0b0b0"/>
-                    <Entry x:Name="entryEstadoFiador"
+                    <Entry x:Name="EntryEstadoFiador"
                                VerticalOptions="Start"
                                TextTransform="Uppercase"
                                TextChanged="EntryEstadoFiador_TextChanged"
@@ -355,14 +355,14 @@
             <Grid ColumnDefinitions="*,*" HorizontalOptions="Start" Margin="10,0,0,0" ColumnSpacing="15">
 
                 <Button
-                        x:Name="btnCancel"
+                        x:Name="BtnCancel"
                         Clicked="BtnCancel_Clicked"
                         Text="Cancelar"
                         Grid.Column="0"
                         HorizontalOptions="Center"/>
 
                 <Button
-                        x:Name="btnGuardar"
+                        x:Name="BtnGuardar"
                         Clicked="BtnGuardar_Clicked"
                         Text="Guardar:)"
                         Grid.Column="1"
