--- a/StareMedic/Views/SearchCC.xaml
+++ b/StareMedic/Views/SearchCC.xaml
@@ -30,24 +30,25 @@
             <AbsoluteLayout>
                 <Switch Style="{StaticResource ProfileSettingSwitch}"
                         x:Name="SwtchIdorName"
+                        IsToggled="True"
                         ThumbColor="{OnPlatform Android='#0969D9', iOS='#FFFFFF',  WinUI='#FFFFFF'}"     
                         OnColor="#0969D9"
                         AbsoluteLayout.LayoutBounds="0.7,0,60,35"
                         AbsoluteLayout.LayoutFlags="XProportional,YProportional" 
-                        Toggled="SwtchIdorName_Toggled"
                         IsVisible="{OnPlatform Android='True',iOS='True',WinUI='True'}"/>
             </AbsoluteLayout>
             <Label Text="Nombre"
                    Style="{StaticResource labelEntry}"/>
-            <Entry x:Name="EntrySearch"
-                       TextChanged="EntrySearch_TextChanged"
-                       Style="{StaticResource entryName}"/>
+            <SearchBar x:Name="SearchBarentry"
+                       TextChanged="SearchBarentry_TextChanged"
+                       SearchButtonPressed="SearchBarentry_SearchButtonPressed"
+                       Style="{StaticResource NameSearchBar}"/>
             <Label Text="Buscar solo en casos activos"
                    VerticalOptions="Center"
                    Style="{StaticResource labelEntry}"/>
             <CheckBox x:Name="ChkBxOnlyActives"
                       VerticalOptions="Center"
-                      IsChecked="True"
+                      IsChecked="False"
                       CheckedChanged="ChkBxOnlyActives_CheckedChanged"/>
         </HorizontalStackLayout>
     </VerticalStackLayout>
