started moving something to the view of this, but thats belong to anew branch, lats continue w merging this change

--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -13,7 +13,7 @@
             <Button x:Name="BtnSaveAll"
                     Text="Guardar Cambios"
                     IsVisible="False"
-                    Clicked="Button_Clicked"/>
+                    Clicked="BtnSaveAll_Clicked"/>
         </HorizontalStackLayout>
 
         
