--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -13,7 +13,7 @@
             <Button x:Name="BtnSaveAll"
                     Text="Guardar Cambios"
                     IsVisible="False"
-                    Clicked="Button_Clicked"/>
+                    Clicked="BtnSaveAll_Clicked"/>
         </HorizontalStackLayout>
 
         
@@ -89,5 +89,8 @@
         <Button Text="Cerrar Caso"
                 x:Name="BtnCerrarCaso"
                 Clicked="BtnCerrarCaso_Clicked"/>
+        <Button Text="Re Abrir caso"
+                x:Name="BtnReopenCase"
+                Clicked="BtnReopenCase_Clicked"/>
     </VerticalStackLayout>
 </ContentPage>
