--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -3,94 +3,105 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StareMedic.Views.ViewClinicalCase"
              Title="ViewClinicalCase">
-    <VerticalStackLayout>
-        <HorizontalStackLayout>
+    <ScrollView>
+        <VerticalStackLayout x:Name="ControllStack">
+
+            <HorizontalStackLayout>
                 <Label 
-                    Text="Welcome to .NET MAUI!"
-                    x:Name="LblName"
-                    VerticalOptions="Center" 
-                    HorizontalOptions="Center" />
-            <Button x:Name="BtnSaveAll"
-                    Text="Guardar Cambios"
-                    IsVisible="False"
-                    Clicked="BtnSaveAll_Clicked"/>
-        </HorizontalStackLayout>
-
-        
-        <VerticalStackLayout>
-            <Label Text="ID: "
-                   x:Name="LblId"/>
-            <!--Name CC & patient-->
-            <HorizontalStackLayout>
-                <Label Text="Caso: "/>
-                <Entry x:Name="EntryName"
-                       Style="{StaticResource entryName}"
-                       IsEnabled="False"/>
-                <Button x:Name="BtnChangeCaseName"
-                        Text="Cambiar"
-                        Clicked="BtnChangeCaseName_Clicked"/>
-
-
-                <!--Implement btn "View Patient Details"-->
-                <Label Text="Paciente: "/>
-                <Entry x:Name="EntryPatient"
-                       Style="{StaticResource entryName}"
-                       IsEnabled="False"/>
-                
-            </HorizontalStackLayout>
-            
-            <!--Name Medic & Room-->
-            <HorizontalStackLayout x:Name="Editables">
-                <Label Text="Medico: "/>
-                <Entry x:Name="EntryMedic"
-                       Style="{StaticResource entryName}"
-                       IsEnabled="False"/>
-                <Button x:Name="BtnChangeMedic"
-                        Text="Cambiar"
-                        Clicked="BtnChangeMedic_Clicked"/>
-
-                <Label Text="Habitacion: "/>
-                <Entry x:Name="EntryRoom"
-                       Style="{StaticResource entryName}"
-                       IsEnabled="False"/>
-                <Button x:Name="BtnChangeRoom"
-                        Text="Cambiar"
-                        Clicked="BtnChangeRoom_Clicked"/>
-            </HorizontalStackLayout>
-            
-            <!--Diagnoose-->
-            <HorizontalStackLayout>
-                <Editor x:Name="EditorDiagnoose"
-                        MaximumWidthRequest="500"
-                        IsReadOnly="True"/>
-
-                <Button x:Name="BtnEditDiagnoose"
-                        Text="Editar"
-                        Clicked="BtnEditDiagnoose_Clicked"/>
-                
-                <!--enable edition-->
-                <Button x:Name="BtnSaveDiagnoose"
-                        Text="Guardar"
-                        IsVisible="False"
-                        IsEnabled="False"
-                        Clicked="BtnSaveDiagnoose_Clicked"/>
-                <Button x:Name="BtnCancelEditionDiagnoose"
-                        Text="Cancelar"
-                        IsVisible="false"
-                        IsEnabled="false"
-                        Clicked="BtnCancelEditionDiagnoose_Clicked"/>
-
+                            Text="Welcome to .NET MAUI!"
+                            x:Name="LblName"
+                            VerticalOptions="Center" 
+                            HorizontalOptions="Center" />
+                <Label Text="Estado: "
+                           x:Name="LblStatus"/>
+                <Button x:Name="BtnEdit"
+                            Text="Editar"
+                            Clicked="BtnEdit_Clicked"/>
+                <Button x:Name="BtnSaveAll"
+                            Text="Guardar Cambios"
+                            IsVisible="False"
+                            Clicked="BtnSaveAll_Clicked"/>
+                <Button x:Name="BtnCancelAll"
+                            Text="Cancelar Cambios"
+                            IsVisible="False"
+                            Clicked="BtnCancelAll_Clicked"/>
             </HorizontalStackLayout>
 
+
+            <VerticalStackLayout class="DataStack">
+                <Label Text="ID: "
+                           x:Name="LblId"/>
+                <!--Name CC & patient-->
+                <HorizontalStackLayout>
+                    <Label Text="Caso: "/>
+                    <Entry x:Name="EntryName"
+                               Style="{StaticResource entryName}"
+                               IsEnabled="False"/>
+
+
+                    <!--Implement btn "View Patient Details"-->
+                    <Label Text="Paciente: "/>
+                    <Entry x:Name="EntryPatient"
+                               Style="{StaticResource entryName}"
+                               IsEnabled="False"/>
+
+                </HorizontalStackLayout>
+
+                <!--Name Medic & Room-->
+                <HorizontalStackLayout x:Name="Editables">
+                    <Label Text="Medico: "/>
+                    <Picker x:Name="PickMedic"
+                                IsEnabled="False">
+                        <Picker.ItemDisplayBinding>
+                            <Binding Path="Nombre"/>
+                        </Picker.ItemDisplayBinding>
+                    </Picker>
+
+                    <Label Text="Habitacion: "/>
+                    <Picker x:Name="PickRoom"
+                                IsEnabled="False">
+                        <Picker.ItemDisplayBinding>
+                            <Binding Path="Nombre"/>
+                        </Picker.ItemDisplayBinding>
+                    </Picker>
+                </HorizontalStackLayout>
+
+                <!--Diagnoose-->
+                <VerticalStackLayout>
+                    <Editor x:Name="EditorDiagnoose"
+                                MaximumWidthRequest="1000"
+                                MinimumHeightRequest="200"
+                                MinimumWidthRequest="500"
+                                IsReadOnly="True"/>
+
+                    <Button x:Name="BtnEditDiagnoose"
+                                Text="Editar"
+                                Clicked="BtnEditDiagnoose_Clicked"/>
+
+                    <!--enable edition-->
+                    <Button x:Name="BtnSaveDiagnoose"
+                                Text="Guardar"
+                                IsVisible="False"
+                                IsEnabled="False"
+                                Clicked="BtnSaveDiagnoose_Clicked"/>
+                    <Button x:Name="BtnCancelEditionDiagnoose"
+                                Text="Cancelar"
+                                IsVisible="false"
+                                IsEnabled="false"
+                                Clicked="BtnCancelEditionDiagnoose_Clicked"/>
+
+                </VerticalStackLayout>
+
+            </VerticalStackLayout>
+            <Button Text="Generar hoja de admision"
+                        x:Name="BtnExportCase"
+                        Clicked="BtnExportCase_Clicked"/>
+            <Button Text="Cerrar Caso"
+                        x:Name="BtnCerrarCaso"
+                        Clicked="BtnCerrarCaso_Clicked"/>
+            <Button Text="Re Abrir caso"
+                        x:Name="BtnReopenCase"
+                        Clicked="BtnReopenCase_Clicked"/>
         </VerticalStackLayout>
-        <Button Text="Generar hoja de admision"
-                x:Name="BtnExportCase"
-                Clicked="BtnExportCase_Clicked"/>
-        <Button Text="Cerrar Caso"
-                x:Name="BtnCerrarCaso"
-                Clicked="BtnCerrarCaso_Clicked"/>
-        <Button Text="Re Abrir caso"
-                x:Name="BtnReopenCase"
-                Clicked="BtnReopenCase_Clicked"/>
-    </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
