improved view clinical case style and implemented delete btn
had to make some adjustments on db context and on database, seems working good, also on romms and medic models, all looks fine

--- a/StareMedic/Views/Viewers/ViewClinicalCase.xaml
+++ b/StareMedic/Views/Viewers/ViewClinicalCase.xaml
@@ -4,14 +4,14 @@
              x:Class="StareMedic.Views.ViewClinicalCase"
              Title="ViewClinicalCase">
     <ScrollView>
-        <VerticalStackLayout x:Name="ControllStack">
+        <VerticalStackLayout HorizontalOptions="StartAndExpand">
 
             <HorizontalStackLayout>
                 <Label 
                             Text="Welcome to .NET MAUI!"
                             x:Name="LblName"
                             VerticalOptions="Center" 
-                            HorizontalOptions="Center" />
+                            HorizontalOptions="Center"/>
                 <Label Text="Estado: "
                            x:Name="LblStatus"/>
                 <Button x:Name="BtnEdit"
@@ -20,11 +20,19 @@
                 <Button x:Name="BtnSaveAll"
                             Text="Guardar Cambios"
                             IsVisible="False"
+                            IsEnabled="False"
                             Clicked="BtnSaveAll_Clicked"/>
                 <Button x:Name="BtnCancelAll"
                             Text="Cancelar Cambios"
                             IsVisible="False"
+                            IsEnabled="False"
                             Clicked="BtnCancelAll_Clicked"/>
+                <Button x:Name="BtnDelete"
+                            Text="Eliminar"
+                            IsVisible="False"
+                            IsEnabled="False"
+                            Clicked="BtnDelete_Clicked"
+                            />
             </HorizontalStackLayout>
 
 
