--- a/StareMedic/Views/SearchCC.xaml
+++ b/StareMedic/Views/SearchCC.xaml
@@ -4,10 +4,11 @@
              x:Class="StareMedic.Views.SearchCC"
              Title="SearchCC">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
+        <Button 
+            Text="Nuevo Caso Clinico"
             VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+            Clicked="Button_Clicked"
+            HorizontalOptions="End" />
         <ListView x:Name="ListViewCC"
                   ItemSelected="ListViewCC_ItemSelected"
                   ItemTapped="ListViewCC_ItemTapped"
