--- a/StareMedic/Views/Viewers/MedicControll.xaml
+++ b/StareMedic/Views/Viewers/MedicControll.xaml
@@ -5,11 +5,12 @@
              Title="MedicControll">
     <VerticalStackLayout Style="{StaticResource mainVerticalStackLayout}">
         <!--Display ID-->
-        <Label FontSize="Title"
-               Text="ID:"
-               x:Name="lblID"
+        <Button 
+               Text="Eliminar"
+               x:Name="BtnDelete"
+                Clicked="BtnDelete_Clicked"
                VerticalOptions="Center" 
-               HorizontalOptions="Start" />
+               HorizontalOptions="End" />
 
         <!--Name & Phone cap-->
         <Grid ColumnDefinitions="*,*" RowDefinitions="*,*" Padding="10">
