--- a/StareMedic/MainPage.xaml
+++ b/StareMedic/MainPage.xaml
@@ -3,8 +3,51 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StareMedic.MainPage">
 
-    <FlexLayout  Margin="10,10,10,10" AlignItems="Center" JustifyContent="Start" Wrap="Wrap">
+    <ContentPage.Resources>
+        <Color x:Key="Principal">#FFFBF5</Color>
+        <Color x:Key="Secundario">#F7EFE5</Color>
+        <Color x:Key="Alter1">#C3ACD0</Color>
+        <Color x:Key="Alter2">#7743DB</Color>
+        
+        
+    </ContentPage.Resources>
 
+    <!--<Shell.TitleView>
+        <Image Source="hamburguer.png"
+               BackgroundColor="{StaticResource Secundario}"    
+               VerticalOptions="End"
+               HorizontalOptions="End"/>
+    </Shell.TitleView>--> 
+        
+      
+
+        <FlexLayout  Margin="10,20,20,20" AlignItems="Center" JustifyContent="Start" Wrap="Wrap" BackgroundColor="{StaticResource Alter1}">
+
+        <Grid x:Name="Flex" BackgroundColor="{StaticResource Alter1}">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="200"/>
+                
+            </Grid.ColumnDefinitions>
+            
+            
+
+                <!--<ImageButton Source="C:\\Users\\erick\\OneDrive\\Documentos\\StareIcons\\hamburguer.png" Clicked="OnHamburgerClicked" Margin="10"/>-->
+
+        </Grid>
+        
+        <!--Menu icon-->
+
+        
+  
+        <Border x:Name="sidePanel" BackgroundColor="Black" WidthRequest="150" HeightRequest="300" IsVisible="False">
+            
+            <Label Text="Contenido de la pestaña" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+        </Border>
+
+     
+        <Label Text="Contenido principal" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
+            
 
         <Button
             x:Name="BtnPacientes"
