--- a/StareMedic/AppShell.xaml
+++ b/StareMedic/AppShell.xaml
@@ -92,6 +92,35 @@
                         <TapGestureRecognizer Tapped="BtnMedics_Clicked"/>
                     </Grid.GestureRecognizers>
                 </Grid>
+                <Grid ColumnDefinitions="Auto, *, Auto"
+                      Padding="20"  
+                      ColumnSpacing="20">
+
+                    <Image Grid.Column="0"
+                           Source="edit_medics.png"
+                           Aspect="AspectFill"
+                           HeightRequest="25"
+                           WidthRequest="25"/>
+
+                    <Label Grid.Column="1"
+                           Text="Editar Doctores"
+                           FontFamily="Sans Serif"
+                           TextColor="#FFFBF5"
+                           FontSize="16"/>
+
+
+                    <Label Grid.Column="2"
+                           Text=">"
+                           FontAttributes="Bold"
+                           TextColor="#FFFBF5"
+                           FontFamily="Sans Serif"
+                           Scale="1.5"/>
+
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="BtnSearchCC_Clicked"/>
+                    </Grid.GestureRecognizers>
+                </Grid>
+
 
                 <Grid ColumnDefinitions="Auto, *, Auto"
                       Padding="20"  
