--- a/StareMedic/Views/RegisterClinicalCase.xaml
+++ b/StareMedic/Views/RegisterClinicalCase.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StareMedic.Views.RegisterClinicalCase"
-             Title="Registro de Caso Clinico">
+             Title="Nueva Admision Clinica">
     <VerticalStackLayout Style="{StaticResource mainVerticalStackLayout}">
         <!--some info label, not yet xD-->
         <Label 
