--- a/StareMedic/AppShell.xaml
+++ b/StareMedic/AppShell.xaml
@@ -122,7 +122,37 @@
                     </Grid.GestureRecognizers>
 
                 </Grid>
-                
+
+                <Grid ColumnDefinitions="Auto, *, Auto"
+                      Padding="20"  
+                      ColumnSpacing="20">
+
+                    <Image Grid.Column="0"
+                   Source="edit_rooms.png"
+                   Aspect="AspectFill"
+                   HeightRequest="25"
+                   WidthRequest="25"/>
+
+                    <Label Grid.Column="1"
+                   Text="Editar Habitaciones"
+                   TextColor="#FFFBF5"
+                   FontFamily="Sans Serif"
+                   FontSize="16"/>
+
+
+                    <Label Grid.Column="2"
+                   Text=">"
+                   FontAttributes="Bold"
+                   TextColor="#FFFBF5"
+                   FontFamily="Sans Serif"
+                   Scale="1.5"/>
+
+                    <Grid.GestureRecognizers>
+                        <TapGestureRecognizer Tapped="BtnSearchCC_Clicked"/>
+                    </Grid.GestureRecognizers>
+
+                </Grid>
+
                 <!--A Column to separate the elements-->
 
                 <Grid ColumnDefinitions="Auto"
